B-F Backup Sandbox 30.4.12/src/objects/Vendor__c.object
<CustomObject>
    <fields>
        <fullName>Country_LAND1__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>AD - Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE - Utd.Arab.Emir.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF - Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG - Antigua&amp;Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI - Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL - Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM - Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AN - Dutch Antilles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO - Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ - Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR - Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS - Samoa,American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT - Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU - Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW - Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ - Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA - Bosnia-Herz.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB - Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD - Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE - Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF - Burkina-Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG - Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH - Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI - Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ - Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM - Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN - Brunei Dar-es-S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO - Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS - Bahamas</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>ADP - Andoran peseta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AED - United Arab Emirates Dirham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFA - Afghani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL - Albanian Lek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMD - Armenian Dram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANG - West Indian Guilder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AON - Angolan New Kwanza</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARS - Argentine Peso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATS - Austrian Schilling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD - Australian Dollar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUDN - Australian dollar extra decimals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWG - Aruban Guilder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZM - Azerbaijan Manat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZN - Azerbaijani Manat (new)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAD - Bosnia-Herzogovinian Dinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAM - Bosnian Mark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBD - Barbados Dollar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDT - Bangladesh Taka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEF - Belgian Franc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BGL - Bulgarian Lev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BGN - Bulgarian Lev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHD - Bahrain Dinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIF - Burundi Franc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMD - Bermudan Dollar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BND - Brunei Dollar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOB - Bolivian peso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRL - Brazilian Real (new)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSD - Bahaman Dollar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTN - Bhutan Ngultrum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BWP - Botswana Pula</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <inlineHelpText>The customer number is used by the payment and dunning programs for clearing open items.</inlineHelpText>
        <label>Customer Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_City__c</fullName>
        <description>Destination City</description>
        <inlineHelpText>If the primary Incoterm is, for example, FOB (&quot;Free on Board&quot;), then the second field provides details of the port from which the delivery leaves (for example, &quot;FOB Boston&quot;).</inlineHelpText>
        <label>Destination City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address_for_Payment_Notification__c</fullName>
        <label>Email Address for Payment Notification</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emergency_request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Emergency request checkbox</description>
        <inlineHelpText>Is this an urgent request?</inlineHelpText>
        <label>Emergency request?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimate_Annual_Purchase__c</fullName>
        <label>Estimate Annual Purchase</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluated_Receipt_Settlement__c</fullName>
        <description>Evaluated Receipt Settlement Vendor</description>
        <inlineHelpText>&quot;Paid based upon the bill of lading for Production item only, no invoice required by vendor&quot;  (only valid when PROD or WINE is selected as Purchase Organization).</inlineHelpText>
        <label>Evaluated Receipt Settlement</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Extended_Company_Code__c</fullName>
        <label>Extended Company Code</label>
        <picklist>
            <picklistValues>
                <fullName>1000 - Brown-Forman Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2300 - Sonoma-Cutrer Vineyards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3000 - Jack Daniel Distillery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3200 - Early Times Distillers Co</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3300 - Canadian Mist Distillers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3500 - B-F Tequila Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3510 - Valle de Amatitan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3520 - Cosesa - BF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4043 - B-F Worldwide Taiwan LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4060 - LLC Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4140 - Brown-Forman Shanghai LTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4157 - Brown-Forman Korea LTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4170 - Brown-Forman Thailand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4190 - Brown-Forman Ukraine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4260 - Brown-Forman Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4645 - Brown-Forman Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4801 - Clintock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4810 - BF Czech &amp; Slovak Rep SRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4960 - FVW LTD.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4965 - Brown-Forman Turkey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5540 - Brown-Forman Beverages Eu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5554 - Brown-Forman Nordic DF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5560 - BF Beverages Europe Ltd.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5590 - BF Polska Sp z.o.o.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Extended_Method_of_Payment__c</fullName>
        <label>Extended Method of Payment</label>
        <picklist>
            <controllingField>Extended_Company_Code__c</controllingField>
            <picklistValues>
                <fullName>A = ACH (AP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A - Czech LLC - ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A - Low Value In-country (AP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A - US - ACH (AP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A - З розрах рахунку</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B - Korea Book Transfer (AP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C - Check (AP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C - Cheque EUR (Ireland).</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C - Taiwan Manual Check (AP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C - Thailand Manual Check (AP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C - USD$ Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D - Bank Draft (AP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D - Boleto/Duplicata</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D - CAD$ Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D - Czech LLC - USD ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D - Direct Debits Authorized Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D - FX Bank Draft (AP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E - Czech LLC - ERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E - ERS Check (AP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F - Wire Transfer (AP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F - BF electronic China Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F - BFCS-Wire Transfer (AP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F - FX Wire Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F - FX Wire Transfer (AP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F - FX Wire Transfer Same Day (AP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F - Korea DFT (AP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F - Telegraphic Transfer (AP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G - ACH DEBIT (AP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G - AUTOPAY DEBIT (AP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G - Direct Debit (AP)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fiscal_Address__c</fullName>
        <label>Fiscal Address</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterms_FOB_Terms__c</fullName>
        <label>Incoterms (FOB Terms)</label>
        <picklist>
            <picklistValues>
                <fullName>CFR - Costs &amp; Freight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIF - Costs, Insurance &amp; Freight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIP - Carriage &amp; Insurance Paid To</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPP - Carriage Paid To Port</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPR - Carriage Paid To Ramp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPT - Carriage Paid To Destination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAF - Delivered at Frontier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDP - Delivered Duty Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDU - Delivered Duty Unpaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEQ - Delivered Ex-Quay (Duty Paid)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DES - Delivered Ex-Ship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DPC - Delivered Duty Paid Collect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DUC - Delivered Duty Unpaid Collect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXC - Ex-Works Freight Collect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXD - Carriage Paid To Port</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXP - Carriage Paid To Destination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXW - Ex-Works</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXX - Ex-Works - Prepaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAS - Free Along Side Ship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCA - Free Carrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FH - Free House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOB - Free on Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UN - Not Free</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Individual_Payment_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this is checked, Individual Payments will be sent and Extra Fees will be incurred</inlineHelpText>
        <label>Individual Payment Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internet_Address__c</fullName>
        <label>Internet Address</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <controllingField>Approval_Status__c</controllingField>
            <picklistValues>
                <fullName>AF - Afrikaans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR - Arabic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG - Bulgarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Catalan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS - Czech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Danish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE - German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EL - Greek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EN - English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES - Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ET - Estonian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FI - Finnish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR - French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE - Hebrew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR - Croatian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HU - Hungarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID - Indonesian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS - Icelandic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT - Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JA - Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KO - Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LT - Lithuanian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LV - Latvian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS - Malaysian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NL - Dutch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO - Norwegian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL - Polish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT - Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO - Romanian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RU - Russian</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Method_of_Payment__c</fullName>
        <inlineHelpText>It is required that the banking information provided be faxed (or Emailed) on the company&apos;s letterhead or Invoice to the Accounts Payable Department of Brown-Forman for verification at 502-774-7183.</inlineHelpText>
        <label>Method of Payment</label>
        <picklist>
            <controllingField>Company_Code__c</controllingField>
            <picklistValues>
                <fullName>A = ACH (AP)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>A - Czech LLC - ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A - Low Value In-country (AP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A - US - ACH (AP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A - З розрах рахунку</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B - Korea Book Transfer (AP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C - Check (AP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C - Cheque EUR (Ireland).</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C - Taiwan Manual Check (AP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C - Thailand Manual Check (AP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C - USD$ Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D - Bank Draft        (AP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D - Boleto/Duplicata</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D - CAD$ Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D - Czech LLC - USD ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D - Direct Debits Authorized Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D - FX Bank Draft        (AP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E - Czech LLC - ERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E - ERS Check (AP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F - BFCS-Wire Transfer (AP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F - BF electronic China Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F - FX Wire Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F - FX Wire Transfer (AP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F - FX Wire Transfer Same Day (AP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F - Korea DFT    (AP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F - Telegraphic Transfer (AP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F -  Wire Transfer (AP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G - ACH DEBIT (AP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G - AUTOPAY DEBIT (AP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G - Direct Debit (AP)</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Minority_Indicator__c</fullName>
        <description>Diversity in US Owned Business</description>
        <inlineHelpText>A business enterprise is classified as a minority-owned business if the company is at least 51 percent owned, controlled and operated by one or more individuals from a minority group.  Certification Required.</inlineHelpText>
        <label>Minority Indicator</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Minority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Woman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minority Woman</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mode_of_Transportation__c</fullName>
        <label>Mode of Transportation</label>
        <picklist>
            <picklistValues>
                <fullName>Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inland Waterways</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tanker Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truck</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>My_Manager_Email__c</fullName>
        <formula>CreatedBy.Manager.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Manager__c</fullName>
        <formula>CreatedBy.Manager.FirstName   &amp;  &quot; &quot; &amp;  CreatedBy.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NON_US_Bank_Region__c</fullName>
        <label>Bank Region</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NON_US_Business_Address_STRAS__c</fullName>
        <label>Business Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NON_US_Business_Region_Picklist__c</fullName>
        <label>NON-US Business Region</label>
        <picklist>
            <controllingField>Country_LAND1__c</controllingField>
            <picklistValues>
                <fullName>AU - ACT - Aust Capital Terr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU - NSW - New South Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU - NT - Northern Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU - QLD - Queensland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU - SA - South Autralia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU - TAS - Tasmania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU - VIC - Victoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU - WA - Western Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - AC - Acre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - AL - Alagoas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - AM - Amazonas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - AP - Amapá</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - BA - Bahia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - CE - Ceará</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - DF - Distrito Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - ES - Espírito Santo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - GO - Goiás</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - MA - Maranhão</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - MG - Minas Gerais</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - MS - Mato Grosso do Sul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - MT - Mato Grosso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - PA - Pará</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - PB - Paraíba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - PE - Pernambuco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - PI - Piauí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - PR - Paraná</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - RJ - Rio de Janeiro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - RN - Rio Grande do Norte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - RO - Rondônia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - RR - Roraima</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NON_US_Business_Region__c</fullName>
        <inlineHelpText>If Other enter NON-US Business Region value</inlineHelpText>
        <label>Other Business Region</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NON_US_Payment_Address_STRAS__c</fullName>
        <label>Payment Address</label>
        <type>TextArea</type>
    </fields>
</CustomObject>